fix: bank input popup not showing

--- a/client/src/app/dashboard/employer/page.module.scss
+++ b/client/src/app/dashboard/employer/page.module.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/abstracts/mixins-screens" as screens;
 
-#welcomerAndDateTime {
-  .wrapper {
+#dateAndTime {
+  .content {
     display: flex;
     flex-direction: column;
     gap: 10px;
